Second commit The menu structure has been created.

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ru">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,6 +7,27 @@
     <title>Document</title>
 </head>
 <body>
+    <!-- Добавить тэг header для указания внутри него
+    логотипа и меню сайта -->
+    <header>
+        <div class="container">
+            <!-- Разместить логотип -->
+            <a href="">
+                <img src="./img/" alt="Logo">
+            </a>
+            <nav>
+                <ul>
+                    <li><a href="">Домашняя страница</a></li>
+                    <li><a href="">Наши продукты</a></li>
+                    <li><a href="">Наши услуги</a></li>
+                    <li><a href="">Цены</a></li>
+                    <li><a href="">О нашей фирме</a></li>
+                    <li><a href="">Контакты</a></li>
+                </ul>
+            </nav>
+            <a href="">Получить доступ</a>
+        </div>
+    </header>
     
 </body>
 </html>
