Sixth commit Fixed section with contact details.

--- a/index.html
+++ b/index.html
@@ -128,23 +128,27 @@
                 <ul class="section-contacts-list">
                     <li class="section-item">
                         <span class="section-contacts-icon"></span>
-                        <strong>Our address</strong>
+                        <strong class="section-contacts-heading">Our address</strong>
                         <div class="section-contacts-info">
-
+                            On the country for grandfather
                         </div>
                     </li>
                     <li class="section-item">
                         <span class="section-contacts-icon"></span>
-                        <strong>Our phones</strong>
+                        <strong class="section-contacts-heading">Our phones</strong>
                         <div class="section-contacts-info">
-                            
+                            <a href="tel:+74991111111" class="section-contacts-link">+7(499)111-11-11</a>
+                            <br>
+                            <a href="tel:+74992222222" class="section-contacts-link">+7(499)222-22-22</a>
                         </div>
                     </li>
                     <li class="section-item">
                         <span class="section-contacts-icon"></span>
-                        <strong>Our email</strong>
+                        <strong class="section-contacts-heading">Our email</strong>
                         <div class="section-contacts-info">
-                            
+                            <a href="mailto:example1@example1.com" class="section-contacts-link">example1@example1.com</a>
+                            <br>
+                            <a href="mailto:example1@example2.com" class="section-contacts-link">example2@example1.com</a>
                         </div>
                     </li>
                 </ul>
