--- a/index.html
+++ b/index.html
@@ -155,6 +155,49 @@
             </div>
         </section>
     </main>
+
+    <footer class="footer">
+        <div class="container">
+            <div class="footer-left">
+                <a href="">
+                    <img src="./img/MyLogo.png" alt="Logo" class="logo-img" width="150" height="auto">
+                </a>
+                <small class="footer-copyrights">
+                    Copyright 2222.All Rights Reserved
+                </small>
+            </div>
+            <div class="footer-right">
+                <nav class="footer-nav">
+                    <ul class="footer-nav-list">
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-nav-link">О компании</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-nav-link">Контакты</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-nav-link">Пользовательское соглашение</a>
+                        </li>
+                        <li class="footer-nav-item">
+                            <a href="#" class="footer-nav-link">Защита персональных данных</a>
+                        </li>
+                    </ul>
+                </nav>
+                <ul class="footer-social-list">
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <span class="footer-social-item"></span>
+                        </a>
+                    </li>
+                    <li class="footer-social-item">
+                        <a href="" class="footer-social-link">
+                            <span class="footer-social-item"></span>
+                        </a>
+                    </li>
+                </ul>
+            </div>
+        </div>
+    </footer>
     
 </body>
 </html>
