--- a/index.html
+++ b/index.html
@@ -5,12 +5,14 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel="stylesheet" href="css/normalize.css">
+    <link rel="stylesheet" href="css/style.css">
 </head>
 <body>
     <!-- Добавить тэг header для указания внутри него
     логотипа и меню сайта -->
     <header class="header">
-        <div class="container">
+        <div class="container header-container">
             <!-- Разместить логотип -->
             <a href="">
                 <img src="./img/MyLogo.png" alt="Logo" class="logo-img" width="150" height="auto">
@@ -25,7 +27,7 @@
                     <li class="nav-item"><a href="" class="nav-link">Контакты</a></li>
                 </ul>
             </nav>
-            <a href="" class="btn">Получить доступ</a>
+            <a href="" class="btn header-btn">Получить доступ</a>
         </div>
     </header>
 
