Ninth commit Styles have been added for the unique selling proposition section and comments.

--- a/index.html
+++ b/index.html
@@ -33,20 +33,22 @@
 
     <main>
         <section class="section-usp">
-            <div class="container">
-                <h1 class="section-usp-heading">Юриспруденция и современные технологии</h1>
-                <p class="section-usp-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, voluptates? Repellat harum velit voluptas ipsam in dolorem molestias deserunt officia expedita maxime. Possimus, repudiandae. Tempore.</p>
-                <a href="" class="btn">Получить доступ</a>
-                <div class="section-usp-btn-description">
-                    <span class="section-usp-ssl-icon">Защищено SSL сертификатом</span>
+            <div class="container usp-container">
+                <div class="usp-content">
+                    <h1 class="section-usp-heading">Юриспруденция и современные технологии</h1>
+                    <p class="section-usp-description">Lorem ipsum dolor sit amet consectetur adipisicing elit. Eaque, voluptates? Repellat harum velit voluptas ipsam in dolorem molestias deserunt officia expedita maxime. Possimus, repudiandae. Tempore.</p>
+                    <a href="" class="btn">Получить доступ</a>
+                    <div class="section-usp-btn-description">
+                        <span class="section-usp-ssl-icon">Защищено SSL сертификатом</span>
+                    </div>
                 </div>
             </div>
         </section>
 
         <section class="section-do">
             <div class="container">
-                <h2 class="section-heading">Что мы делаем</h2>
-                <p class="section-description">Lorem ipsum dolor sit amet,</p>
+                <h2 class="section-heading text-center">Что мы делаем</h2>
+                <p class="section-description text-center">Lorem ipsum dolor sit amet,</p>
                 <ul class="section-do-list">
 
                     <li class="section-do-item">
